# auth0-fastapi

./: .gitignore  .ruff.toml  .snyk  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: Bug Report.yml  Feature Request.yml
.github/actions/get-release-notes/: action.yml
.github/workflows/: codeql.yml  publish.yml  sca_scan.yml  snyk.yml  tests.yml
examples/: MultipleCustomDomains.md
src/auth0_fastapi/: config.py
src/auth0_fastapi/auth/: auth_client.py
src/auth0_fastapi/errors/: __init__.py
src/auth0_fastapi/server/: routes.py
src/auth0_fastapi/stores/: stateful_state_store.py
src/auth0_fastapi/test/: test_auth_client.py  test_routes.py  test_stateful_store.py  test_stateless_store.py
src/auth0_fastapi/util/: __init__.py
