[tool.poetry]
name = "auth0-fastapi"
version = "1.0.0.b5"
description = "Auth0 FastAPI Python SDK"
readme = "README.md"
authors = ["Auth0 <support@auth0.com>"]
license = "MIT"

packages = [
  { include = "auth0_fastapi", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
auth0-server-python = ">=1.0.0b5"  
fastapi = ">=0.115.11,<0.117.0"
pydantic = "^2.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.14.0"
uvicorn = "^0.38.0"
ruff = ">=0.12.7,<0.15.0"

[tool.pytest.ini_options]
addopts = "--cov=auth0_fastapi --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"